envoy/envoy.yaml
admin:
  access_log_path: /tmp/admin_access.log
  address:
    socket_address: { address: 0.0.0.0, port_value: 9901 }
static_resources:
  listeners:
    - name: http
      address:
        socket_address: { address: 0.0.0.0, port_value: 80 }
      filter_chains:
        - filters:
            - name: envoy.http_connection_manager
              config:
                codec_type: auto
                stat_prefix: ingress_http
                route_config:
                  name: http_route
                  virtual_hosts:
                    - name: http_service
                      domains: ["*"]
                      routes:
                        - match: { prefix: "/" }
                          route: { cluster: http_cluster }
                http_filters:
                  - name: envoy.router
    - name: grpc
      address:
        socket_address: { address: 0.0.0.0, port_value: 5000 }
      filter_chains:
        - filters:
            - name: envoy.http_connection_manager
              config:
                codec_type: auto
                stat_prefix: ingress_http
                route_config:
                  name: grpc_route
                  virtual_hosts:
                    - name: grpc_service
                      domains: ["*"]
                      routes:
                        - match: { prefix: "/", grpc: {} }
                          route: { cluster: grpc_cluster }
                http_filters:
                  - name: envoy.router
clusters:
  - name: http_cluster
    connect_timeout: 1s
    type: strict_dns
    lb_policy: round_robin
    hosts:
      - socket_address:
          address: 172.17.0.2
          port_value: 30580
  - name: grpc_cluster
    connect_timeout: 1s
    type: strict_dns
    lb_policy: round_robin
    http2_protocol_options: {}
    hosts:
      - socket_address:
          address: 172.17.0.2
          port_value: 30580
